removed wrong cpp files

--- a/physics/Makefile.am
+++ b/physics/Makefile.am
@@ -6,11 +6,14 @@ if CXX_INTEL
 endif
 endif
 
-bin_PROGRAMS = latan-2pt-fit latan-2pt-pseudosc-fit
 
-latan_2pt_fit_SOURCES  = 2pt-fit.cpp
-latan_2pt_fit_CXXFLAGS = $(COM_CXXFLAGS)
-latan_2pt_fit_LDFLAGS  = -L../lib/.libs -lLatAnalyze
+latan_fit_2pt_SOURCES  = fit-2pt.cpp
+latan_fit_2pt_CXXFLAGS = $(COM_CXXFLAGS)
+latan_fit_2pt_LDFLAGS  = -L../lib/.libs -lLatAnalyze
+
+latan_fit_phys_SOURCES  = fit-phys.cpp fit-phys-env.cpp
+latan_fit_phys_CXXFLAGS = $(COM_CXXFLAGS)
+latan_fit_phys_LDFLAGS  = -L../lib/.libs -lLatAnalyze
 
 latan_2pt_pseudosc_fit_SOURCES  = 2pt-pseudosc-fit.cpp
 latan_2pt_pseudosc_fit_CXXFLAGS = $(COM_CXXFLAGS)
